# cpendulum

./: CMakeLists.txt  README.md
cmake/: UpdateSubmodules.cmake
src/: CMakeLists.txt
src/main/: Pendulum.cpp  Pendulum.hpp  Weight.cpp  Weight.hpp  main.cpp
src/test/: InitialStatePendulumTest.cpp  SimulationPendulumTest.cpp
